--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <h1>
           DO NOT BELIEVE IN DOUGHNUTS
       </h1>
+    <h2> The Donut Conspiracy
+    </h2>
+    <hr>
+
     <div>
-      <img id="donut1" src="local-images/vanilla.jpg" alt="donut1">
-    </div>
-      <div>
-      
+
     </div>
   </div>
 
