--- a/index.html
+++ b/index.html
@@ -13,14 +13,41 @@
 <body>
   <div id="D">
     <h1>
-          DO NOT BELIEVE IN DOUGHNUTS?
+          DO NOT BELIEVE IN DOUGHNUTS
       </h1>
     <h2> The Donut Conspiracy
     </h2>
     <hr>
 
     <div>
-
+      <div><p>Do you like donuts?</p>
+      <img id="donuts1" src= "local-images/vanilla.jpg" alt= "vanilladonut"> 
+      <p>Do you like the creamy taste and the sugary topping? Do you dream of donuts when you sleep?</p>
+      <p> If you do, you don't know the <span class = "bold">secret</span> that donuts try to hide from you.</p>
+      <p>Donuts have proven time and time again that rthey are not what they seem. They watch at us night. 
+      They steal our things when we sleep. They give us nightmares. They are <span>NOT</span> our friends 
+      like they make it seem.</p>
+      </div>
+      <div>
+        <h2>BEHOLD THE SECRET</h2>
+      <p>Donuts work for a secret orginazaionm that we can't see with our regular eyes. They are the evil in our live that we must remove!!</p>
+      <p>In oorder to see this evil, we must look closer at the situation.</p>
+      <div> 
+      <p>Donuts</p>
+      <p>Doughnuts</p>
+      <p>The word Doughnut has 8 letter</p>
+      <p>Do you know what else hase 8 letters? That's right sprinkle has eight letters</p>
+      <p>Sprinkle ---> ice cream</p>
+      <p>ice cream ---> ice cream cake</p>
+      <p>cake ---> frosting</p>
+      <p>frosting ---> rainbow frosting</p>
+      <p>rainbow frosting starts with the letter "R"</p>
+      <p>R</p>
+      <img id="Rdonuts" src= "local-images/Rdonuts.jpg" alt= "Rdonuts"> 
+      <p></p>
+      </div>
+      </div>
+      
     </div>
   </div>
 
