finished html (needs edits)

--- a/index.html
+++ b/index.html
@@ -43,8 +43,22 @@
       <p>frosting ---> rainbow frosting</p>
       <p>rainbow frosting starts with the letter "R"</p>
       <p>R</p>
-      <img id="Rdonuts" src= "local-images/Rdonuts.jpg" alt= "Rdonuts"> 
-      <p></p>
+      <img id="Rdonuts" src= "local-images/Rdonut.jpg" alt= "Rdonuts"> 
+      <p>In the words bay Ridge, Ridge has the letter R</p>
+      <p>You know what else has the letter R? Rocks</p>
+      <p>Some rocks are round.</p>
+      <p>Donuts are also round</p>
+      <p>Donuts also have a round hole in the centre</p>
+      <p>In this picture, you can see an eye loking through the hole in the donuut.</p>
+      <img id="eyedonut" src= "local-images/eyedonut.jpg" alt= "eyedonut">
+      <p>Eyes balls are also round </p>
+      <p>Eyes can also look a'round'</p>
+      <p>When eyes look around, they can see shapes</p>
+      <p>circles are shapes</p>
+      <p>circles are also round</p>
+      <br>
+      <p>Facts have been proven</p>
+      <p>illuminati confirmed</p>
       </div>
       </div>
       
