--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css'>
   <meta charset="UTF-8">
   <title>title</title>
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="style.css" type="text/css">
   <style type="text/css">
 
   </style>
@@ -18,8 +20,8 @@
     <h2> The Donut Conspiracy
     </h2>
     <hr>
-
-    <div>
+    
+    <div class="donutclass">
       <div>
         <p>Do you like donuts?</p>
         <img id="donuts1" src="local-images/vanilla.jpg" alt="vanilladonut">
