--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!--https://commons.wikimedia.org/wiki/File:Dunkin-Donuts-Vanilla-Sprinkled.jpg-->
+<!--Photos by Rawfur and Sharon-->
 <!DOCTYPE html>
 <html>
 
