--- a/index.html
+++ b/index.html
@@ -31,26 +31,30 @@
         <p>Do you like the creamy taste and the sugary topping? Do you dream of donuts when you sleep?
           <br>If you do, you don't know the <span class="italic">secret</span> that donuts try to hide from you.
           <br>Donuts have proven time and time again that they are not what they seem.
-          <br>They watch at us night. They steal our things when we sleep. They give us nightmares. They are <span>NOT</span> our friends like they make it seem.</p>
+          <br>They watch at us night. They steal our things when we sleep. They give us nightmares. 
+          They are <span>NOT</span> our friends like they make it seem. They LIE!!</p>
       </div>
       <div>
         <h3>BEHOLD THE SECRET</h3>
-        <p>Donuts work for a secret organization that we can't see with our regular eyes. They are the evil in our lives that we must remove!!
+        <p>Donuts work for a secret organization that the average eye does not see. 
+        They are the evil in our lives that we must remove!!
           <br>
         </p>
         <div>
 
           <p>
-            In order to see this evil, we must look closer at the situation:</p>
+            In order to see this evil, we must look closer at the situation.
+            <br>
+            Here is a glimpse of the truth:</p>
           <div id="par1">
             <p>Donut = Doughnut
-              <br> Doughnut = 8 letters
-              <br> 8 letters = Sprinkle
-              <br> Sprinkle = Ice cream
+              <br> The word Doughnut has 8 letters
+              <br> The word sprinkle also has 8 letters
+              <br> Sprinkles are put on Ice cream
               <br> Ice cream = Ice cream cake
-              <br> Cake = Frosting
+              <br> Frosting is put on cake
               <br> Frosting = Rainbow frosting
-              <br> Rainbow frosting = Letter "R"
+              <br> Rainbow frosting has the Letter "R"
               <br>
             </p>
 
@@ -68,9 +72,9 @@
           <br>
           <br>
           <div id="par2">
-            <p>Bay Ridge = Ridge
-              <br> Ridge = Letter R
-              <br> Letter R = Rocks
+            <p>Bay Ridge also has the letter "R"
+              <br> Do you know what else has the letter R?
+              <br> The word rock
               <br> Rocks = Round
               <br> Round = Donuts</br>
               Donuts = Round hole in the center
