--- a/index.html
+++ b/index.html
@@ -31,21 +31,18 @@
         <p>Do you like the creamy taste and the sugary topping? Do you dream of donuts when you sleep?
           <br>If you do, you don't know the <span class="italic">secret</span> that donuts try to hide from you.
           <br>Donuts have proven time and time again that they are not what they seem.
-          <br>They watch at us night. They steal our things when we sleep. They give us nightmares. 
-          They are <span>NOT</span> our friends like they make it seem. They LIE!!</p>
+          <br>They watch at us night. They steal our things when we sleep. They give us nightmares. They are <span>NOT</span> our friends like they make it seem. They LIE!!</p>
       </div>
       <div>
         <h3>BEHOLD THE SECRET</h3>
-        <p>Donuts work for a secret organization that the average eye does not see. 
-        They are the evil in our lives that we must remove!!
+        <p>Donuts work for a secret organization that the average eye does not see. They are the evil in our lives that we must remove!!
           <br>
         </p>
         <div>
 
           <p>
             In order to see this evil, we must look closer at the situation.
-            <br>
-            Here is a glimpse of the truth:</p>
+            <br> Here is a glimpse of the truth:</p>
           <div id="par1">
             <p>Donut = Doughnut
               <br> The word Doughnut has 8 letters
@@ -74,10 +71,12 @@
           <div id="par2">
             <p>Bay Ridge also has the letter "R"
               <br> Do you know what else has the letter R?
-              <br> The word rock
-              <br> Rocks = Round
-              <br> Round = Donuts</br>
-              Donuts = Round hole in the center
+              <br> That is right, The word rock has the letter R
+              <br> Rocks are round
+              <br> Do you know what else is round?
+              <br> Donuts are round
+              </br>Donuts also have a round hole in the center
+              <br> In the picture below, an eye looks through the hole
               <br>
 
 
@@ -91,8 +90,9 @@
           <p>Eyeballs are round
             <br> Eyes can look a'round'
             <br> When eyes look around, they can see shapes
-            <br> Shapes such as circles
-            <br> Circles are also round</p>
+            <br> A circle is a shape
+            <br> Circles are also round
+            <br> The word 'round' starts with the letter R</p>
           <br>
           <br>
           <h2>Facts have been proven</h2>
