--- a/index.html
+++ b/index.html
@@ -95,17 +95,19 @@
             <br> The word 'round' starts with the letter R</p>
           <br>
           <br>
-          <h2>Facts have been proven</h2>
+          <h2>Illuminati Confirmed</h2>
           <h1>COMING OUT JANUARY 32, 2055</h1>
         </div>
       </div>
     </div>
     <form>
+      <div><br>Brothers and sisters we ask you to join us on our pursuit for the truth.
+      <br>Open your eyes!!</div>
       Email:
       <br>
       <input type="email" name="email">
       <br>
-      <input class="blue-button" type="submit" value="Illuminati Confirmed">
+      <input class="blue-button" type="submit" value="submit">
     </form>
   </div>
   </div>
