--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Changa+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <meta charset="UTF-8">
   <title>title</title>
   <link rel="stylesheet" href="style.css" type="text/css">
@@ -96,13 +97,15 @@
           <br>
           <br>
           <h2>Illuminati Confirmed</h2>
-          <h1>COMING OUT JANUARY 32, 2055</h1>
+          <h1>COMING TO THEATERS <br> JANUARY 32, 2055</h1>
         </div>
       </div>
     </div>
     <form>
-      <div><br>Brothers and sisters we ask you to join us on our pursuit for the truth.
-      <br>Open your eyes!!</div>
+      <br>
+      <div id ="note">Brothers and sisters we ask you to join us on our pursuit for the truth.
+      <br>Open your eyes!! - producers </div> 
+      <br>
       Email:
       <br>
       <input type="email" name="email">
