--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
         </div>
       </div>
     </div>
+    <audio controls>
+  <source src="take1.mp3" type="audio/mp3">
+  <source src="take1.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
+<audio controls>
+  <source src="SEP2.mp3" type="audio/mp3">
+  <source src="SEP2.mp3" type="audio/mp3">
+  Your browser does not support the audio element.
+</audio>
     <form>
       <br>
       <div id ="note">Brothers and sisters we ask you to join us on our pursuit for the truth.
